<resources>
    <string name="app_name">CoShop</string>
    <string name="login_activity_title">Login</string>
    <string name="title_activity_new_order">new_order</string>
    <string name="change_password">Change Password</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="done">Done</string>
    <string name="user_name_description">User name displayed here</string>
    <string name="categories_title_description">Title: What Are You Looking For?</string>
    <string name="done_button_description">Button to complete category selection</string>
    <string name="field_required">This field is required</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="wrong_password">Wrong password</string>
    <string name="passwords_must_be_different">Passwords must be different</string>

    <string-array name="report_reasons">
        <item>Spam</item>
        <item>Inappropriate Content</item>
        <item>Harassment</item>
        <item>Other</item>
    </string-array>

    <string-array name="feedback_titles">
        <item>Select Feedback Title</item>
        <item>Your account</item>
        <item>Questions</item>
        <item>Report a bug</item>
        <item>Suggest a feature</item>
        <item>Other</item>
    </string-array>

</resources>