<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CategoriesActivity">

    <TextView
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="TextView"
        android:contentDescription="@string/user_name_description" />

    <TextView
        android:id="@+id/categoriesTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="What Are You Looking For?"
        android:textAlignment="center"
        android:textSize="20sp"
        android:contentDescription="@string/categories_title_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="List of categories">

        <GridLayout
            android:id="@+id/categoryGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:padding="16dp">

            <!-- ImageViews and TextViews for categories will be dynamically added here -->

        </GridLayout>

    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="doneCategory"
        android:text="DONE"
        android:layout_gravity="center"
        android:contentDescription="@string/done_button_description" />

</LinearLayout>
