<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Old Password -->
            <LinearLayout
                android:id="@+id/oldPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/border">

                <EditText
                    android:id="@+id/old_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>

                <ImageView
                    android:id="@+id/toggle_old_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_visibility_off_24"
                    android:contentDescription="@string/toggle_password_visibility"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/oldPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_required"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone"/>

            <!-- New Password -->
            <LinearLayout
                android:id="@+id/newPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:background="@drawable/border">

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>

                <ImageView
                    android:id="@+id/toggle_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_visibility_off_24"
                    android:contentDescription="@string/toggle_password_visibility"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/newPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_required"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone"/>

            <!-- Confirm New Password -->
            <LinearLayout
                android:id="@+id/confirmNewPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:background="@drawable/border">

                <EditText
                    android:id="@+id/confirm_new_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"/>

                <ImageView
                    android:id="@+id/toggle_confirm_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_visibility_off_24"
                    android:contentDescription="@string/toggle_password_visibility"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/confirmNewPasswordError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_required"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone"/>

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bg_selected_consumer"
        android:text="@string/done"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

</LinearLayout>
